Fixed wrong color in datatable SVG icons.

--- a/packages/ketchup/src/components/kup-data-table/modules/kup-data-table-main.scss
+++ b/packages/ketchup/src/components/kup-data-table/modules/kup-data-table-main.scss
@@ -74,7 +74,7 @@ table {
 
 .icon-container {
   float: left;
-  background-color: var(--kup-text-color);
+  background-color: var(--kup-title-color);
   margin: 0 0.25rem;
   height: 1.25rem;
   width: 1.25rem;
